CA-6386 add error_message to SocialNetworkPage

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.38
+* add error_message to SocialNetworkPage
+
 === 0.7.37
 * add new field review_page_display_element to CompanySettings V1 and V2
 
