--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,5 @@
-=== 0.7.41
-* add V2::SuggestionTopic for the company
-
-=== 0.7.40
-* add V2::Topic for the review
-
-=== 0.7.39
-* some fixes for review topics and confirmation
+=== 0.7.42
+* revert bad commits
 
 === 0.7.38
 * add error_message to SocialNetworkPage
@@ -20,15 +14,9 @@
 === 0.7.35
 * add new field reply_name to V2::CustomEmailTemplate
 
-=== 0.7.34
-* add create method for V2/CustomerSuggestion
-
 === 0.7.33
 * add new field unhappy_customer_feedback to CompanySettings V2 and V2
 * add file_presigned_url to V2::DataUpload
-
-=== 0.7.32
-* copy some V1 functions to V2
 
 === 0.7.31
 * Modified the CommunicationCampaign#results method to in_progress
