--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.7.43
+* added field upload_type on V2::DataUpload
+* added field split_mappings_updated on V2::ScottySetting
+
 === 0.7.42
 * revert bad commits
 
