CA-6951 to changelog added workflow_system_template V2::Company

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 === 0.7.43
 * added field upload_type on V2::DataUpload
 * added field split_mappings_updated on V2::ScottySetting
+* added workflow_system_template to V2::Company
 
 === 0.7.42
 * revert bad commits
