--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.46
+* added an column called include_customers_in_contract to disconnect direct connect on V2::CommunicationCampaign
+
 === 0.7.45
 * added an endpoint to disconnect direct connect on V2::Company
 
