--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.50
+* added an endpoint to get and update direct connect setup steps
+
 === 0.7.49
 * added an endpoint to get direct connect import counts on V2::Company
 
