--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.52
+* added new dc_wizard specific attributes to V2/company
+
 === 0.7.51
 * added an endpoint to create direct connect events
 
