--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.53
+* added new api endpoint to get campaign results for a company
+
 === 0.7.52
 * update attribute accessors for V2::Filter
 
