--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.53
+* added an endpoints to list filters
+
 === 0.7.52
 * added an endpoints to list, find and update  on V2::GlobalCampaignSetting
 
