CA-7295 #comment Adding new endpoint to get campaign results for company and specific campaign.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.53
+* added an endpoints to list, show and get summary of campaign results
+
 === 0.7.52
 * added an endpoints to list, find and update  on V2::GlobalCampaignSetting
 
