--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.54
+* added response rate in communication campaign
+
 === 0.7.53
 * added an endpoints to list, show and get summary of campaign results
 
