--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.56
+* added approved field to communication campaign.
+
 === 0.7.55
 * added an endpoints to list, show and get summary of campaign results
 
