--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.58
+* added end point POST(purchase_campaign_credits) to V2::Company
+
 === 0.7.57
 * added filter object as a node to campaign node
 
