--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.60
+* added option to send additional params to end point POST(purchase_campaign_credits) to V2::Company
+
 === 0.7.59
 * added balance_payable to V2::CampaignsCreditSummary
 
