--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.61
+* update charge end point to take credits for a campaign and follow the convention of lobbyist
+
 === 0.7.60
 * added option to send additional params to end point POST(purchase_campaign_credits) to V2::Company
 
