CA-7764 lobbyist changes required for supported_campaigns end point

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.67
+* adding new resource V2::SupportedCampaigns
+
 === 0.7.66
 * adding X-Request-Id header to be passed with all requests.
 
