CA-7762 #comment Added entries for clone campaign in changelog and version file.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.67
+* added clone_campaign end point V2::CommunicationCampaign.
+
 === 0.7.66
 * adding X-Request-Id header to be passed with all requests.
 
