CA-7869 #comment Changes in change_log and version for campaign algo_metadata change.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.75
+* added campaign algo_metadata fields in attr_accessor list.
+
 === 0.7.74
 * added reset branding campaign end point V2::CommunicationCampaign.
 
