--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.74
+* add params for monthly recurring revenue to allow passing flags such as upsell.
+
 === 0.7.73
 * added create branding campaign end point V2::CommunicationCampaign.
 
