--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.7.77
+* added Tag and added attributes in category and front template.
+
 === 0.7.76
 * added campaign algo_metadata field instead of all its keys for communication campaign.
 
