--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.8.0
+* separate custom_filters from filters
+* added Lobbyist::V2::CustomFilter
+
 === 0.7.76
 * added campaign algo_metadata field instead of all its keys for communication campaign.
 
