CA-8243 1)customers list to post call to accommodate for huge parameter meta_data 2) adding more fields to customer endpoints

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.8.1
+* customers list to post call to accommodate for huge parameter meta_data
+* adding more fields to customer endpoints
+
 === 0.8.0
 * Filters V3
 * separate custom_filters from filters
