CA-8341 iteration results

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+=== 0.8.3
+* added Lobbyist::V2::IterationResults
 
 === 0.8.2
 * customers list to post call to accommodate for huge parameter meta_data
