--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.11
+* Fix for Lobbyist::V2::IterationResults.generate_results_file parse response
+
 === 0.8.10
 * Added include_in_results flag in Lobbyist::V2::CommunicationCampaign
 
