--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.12
+* Added paused and resume_date flag in Lobbyist::V2::CommunicationCampaign
+
 === 0.8.11
 * Fix for Lobbyist::V2::IterationResults.generate_results_file parse response
 
