--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.13
+* Added update method in Lobbyist::V2::CustomFilter
+
 === 0.8.12
 * Added paused and resume_date flag in Lobbyist::V2::CommunicationCampaign
 
