--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.14
+* Added multipart true for in Lobbyist::V2::FrontTemplate.create
+
 === 0.8.13
 * Added update method in Lobbyist::V2::CustomFilter
 
