--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+=== 0.8.3
+Prefixing global_campaign_setting #update params with required key
 
 === 0.8.2
 * customers list to post call to accommodate for huge parameter meta_data
