--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.23
+Added API for listing zipcodes for a company
+
 === 0.8.22
 Prefixing global_campaign_setting #update params with required key
 
