--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.26
+Added Lobbyist::V2::SampleContact for sample contacts APIs
+
 === 0.8.23
 Added API for listing zipcodes for a company
 
