--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.32
+* Added mail_dates attribute to Lobbyist::V2::CommunicationCampaign
+
 === 0.8.31
 * Added Lobbyist::V2::CampaignChecklist for update api end point on checklist
 
