--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.32
+* Added Lobbyist::V2::Review.bulk_update
+
 === 0.8.31
 * Added Lobbyist::V2::CampaignChecklist for update api end point on checklist
 
