--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.41
+* Added Lobbyist::V2::CommunicationCampaign.generate_preview.
+
 === 0.8.40
 * Added Lobbyist::V2::ScottySetting.merge_contacts.
 
