--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.42
+* Added Lobbyist::V2::Company.text_unread_count.
+
 === 0.8.41
 * Added Lobbyist::V2::CommunicationCampaign.generate_preview.
 
