--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+=== 0.8.47
+* added new field texting_grants to Lobbyist::V2::Promo table and Lobbyist::V2::CompanySubscription table
+
+* added new field texting_enabled  to Lobbyist::V2::Company table 
+
 === 0.8.46
 * Fixed version bug
 
