--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+=== 0.8.48
+* added new field geocoding_enabled field in Lobbyist::V2::Company
 === 0.8.47
 * added new field texting_grants to Lobbyist::V2::Promo table and Lobbyist::V2::CompanySubscription table
 * added new field texting_enabled  to Lobbyist::V2::Company
