--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+=== 0.8.49
+* Added Lobbyist::V2::CustomerCall.convert_to_email
 === 0.8.48
 * added new field geocoding_enabled field in Lobbyist::V2::Company
 === 0.8.47
