--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+=== 0.8.59.1
+* Added Google auth fields to smart invite settings
+* Added Google review results to company metrics
+
 === 0.8.59
 * Added CommunicationCampaign#preview_text end point
 
