--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+=== 0.8.59.2
+* Added destination attribute to Lobbyist::V2::ReviewInvitation
+
 === 0.8.59
 * Added CommunicationCampaign#preview_text end point
 
