--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+== 0.8.59.5
+* Added owner and source_id attributes in V2::Company
+* Added new endpoint regenerate_demo_data to V2::Company
+* Added new endpoint reset_demo_data to V2::Company
+
 === 0.8.59.3
 * Added Google auth fields to smart invite settings
 * Added Google review results to company metrics
