--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+== 0.8.60
+* gem version for release 2019.r26
+
+== 0.8.59.6
+* Added rank to V2::Category
+
 == 0.8.59.5
 * Added owner and source_id attributes in V2::Company
 * Added new endpoint regenerate_demo_data to V2::Company
