CA-10301 add supports_diff to V2::WorkflowSystemTemplate

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+== 0.8.61
+* gem version for release 2020.r5
+* add supports_diff frild to V2::WorkflowSystemTemplate
+
 == 0.8.60
 * gem version for release 2019.r26
 
