--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+= 0.8.94
+* Added new fields for prospect marketing in Promo
+
+= 0.8.93
+* Added terminate pulseM subscription support
+
 = 0.8.92
 * Added new fields for twilio settings
 
